重构base64编码方法改为java.util